@@ -28,6 +28,9 @@ Version 7.3 05-Jul-07
  
  4. Debugging: adjusted the names of opcodes for different kinds of parentheses 
     in debug output.  
+    
+ 5. Arrange to use "%I64d" instead of "%lld" for long printing in the pcrecpp
+    unittest when running under MinGW.  
 
 
 
